added content to why-bds page

--- a/app/templates/why-bds.hbs
+++ b/app/templates/why-bds.hbs
@@ -1,7 +1,20 @@
 <div class="why-bds">
   <div class="section">
     <div class="container">
-
+      <div class="flex">
+        <ul class="why-bds__info">
+          <li class="why-bds__info--text">Black Dog Surplus, Inc. is unique in the Military and Emergency Management Ration Industry in three distinct areas.</li>
+          <li class="why-bds__info--text">The first is our Certification and Replacement Program. The program is very simple in that once the ration storage facility (be it one owned by the customer or one owned by Black Dog Surplus, Inc.) has been certified by us, we will exchange your rations every TWO YEARS at a minimal replacement cost of less than 30% of the purchase price. That's right! Customers of Black Dog Surplus, Inc. will no longer have to discount or throw away out dated rations! Call us today for more details!</li>
+          <li class="why-bds__info--text">The second area where we are unique is our customization program. Our customers have the ability to customize every aspect of their ration purchase to meet their needs. From the outer package design to the internal contents, our Customer Relations Experts will work with you to design a ration to meet your needs. Minimum order quantities do apply, so call us today to discuss your needs and what we can do to assist you in meeting them.</li>
+          <li class="why-bds__info--text">The third area that makes Black Dog Surplus, Inc. unique in the Ration Industry is our ability to make YOUR ration kits more than just food. We have a whole host of products that can be added to your ration kit to meet and exceed your needs. The products range from Religious and Dietary Main Entrees such as Kosher, Halal, Sikh, Hindu, Vegetarian, and Allergy related diets to additional items such as First Aid Kits, Hygiene Kits, Camp Stoves, Water, and Water Purification Systems.</li>
+          <li class="why-bds__info--text">For those Agencies and Individuals who have grown tired of having to customize their needs to fit with the products our competitors sell, there is a solution! Contact us today to have a ration kit designed to meet YOUR needs!</li>
+        </ul>
+        <div class="why-bds__images">
+          <img class="why-bds__images--actual"src="/img/why-bds-1.jpg" alt="">
+          <img class="why-bds__images--actual"src="/img/why-bds-2.jpg" alt="">
+          <img class="why-bds__images--actual"src="/img/why-bds-3.jpg" alt="">
+        </div>
+      </div>
     </div>
   </div>
 </div>
