--- a/app/styles/why-bds.scss
+++ b/app/styles/why-bds.scss
@@ -2,4 +2,23 @@
   margin: 0;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/why-bds-background.jpg');
   background-size: cover;
+
+  &__info {
+    width: 45%;
+    margin: $m-gutter 0;
+    font-size: 16px;
+
+    &--text {
+      padding: $m-gutter 0;
+    }
+  }
+
+  &__images {
+    width: 45%;
+    margin: $m-gutter 0;
+
+    &--actual {
+      padding: $m-gutter 0;
+    }
+  }
 }
