--- a/app/templates/why-bds.hbs
+++ b/app/templates/why-bds.hbs
@@ -1,6 +1,9 @@
 <div class="why-bds">
   <div class="section">
     <div class="container">
+      <div class="page-header">
+        <h1 class="align-center page-header--text">WHY CHOOSE BLACK DOG SURPLUS?</h1>
+      </div>
       <div class="flex">
         <ul class="why-bds__info">
           <li class="why-bds__info--text">Black Dog Surplus, Inc. is unique in the Military and Emergency Management Ration Industry in three distinct areas.</li>
