--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,8 +1,8 @@
 <div class="contact">
   <div class="section">
     <div class="container">
-      <div class="contact__header">
-        <h1 class="align-center contact__header--text">Contact</h1>
+      <div class="page-header">
+        <h1 class="align-center page-header--text">Contact</h1>
       </div>
       <div class="contact__content flex">
         <div class="contact__left">
