added page-header to every page

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -2,7 +2,7 @@
   <div class="section">
     <div class="container">
       <div class="page-header">
-        <h1 class="align-center page-header--text">Contact</h1>
+        <h1 class="align-center page-header--text">contact</h1>
       </div>
       <div class="contact__content flex">
         <div class="contact__left">
