--- a/app/templates/humanitarian-aid.hbs
+++ b/app/templates/humanitarian-aid.hbs
@@ -1,7 +1,9 @@
 <div class="humanitarian-aid">
   <div class="section">
     <div class="container">
-
+      <div class="page-header">
+        <h1 class="align-center page-header--text">humanitarian aid program</h1>
+      </div>
     </div>
   </div>
 </div>
