--- a/app/templates/why-bds.hbs
+++ b/app/templates/why-bds.hbs
@@ -2,7 +2,7 @@
   <div class="section">
     <div class="container">
       <div class="page-header">
-        <h1 class="align-center page-header--text">WHY CHOOSE BLACK DOG SURPLUS?</h1>
+        <h1 class="align-center page-header--text">why choose black dog surplus?</h1>
       </div>
       <div class="flex">
         <ul class="why-bds__info">
