--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,5 @@
 $m-gutter: 1rem;
+$c-grey: #595959;
 
 $navbar-default-link-color: #000;
 $navbar-default-link-hover-color: #c90404;
@@ -70,14 +71,14 @@ $navbar-default-bg: transparent;
   padding: $m-gutter 0;
 
   &--text {
-    color: #585858;
+    color: $c-grey;
     text-transform: uppercase;
   }
 }
 
 .footer {
   padding: $m-gutter;
-  background: #595959;
+  background: $c-grey;
   color: #ffffff;
   font-size: 1.5rem;
 }
