--- a/app/templates/custom-packaging.hbs
+++ b/app/templates/custom-packaging.hbs
@@ -1,7 +1,9 @@
 <div class="custom-packaging">
   <div class="section">
     <div class="container">
-
+      <div class="page-header">
+        <h1 class="align-center page-header--text">custom packaging</h1>
+      </div>
     </div>
   </div>
 </div>
