--- a/app/templates/our-mission.hbs
+++ b/app/templates/our-mission.hbs
@@ -1,7 +1,9 @@
 <div class="our-mission">
   <div class="section">
     <div class="container">
-
+      <div class="page-header">
+        <h1 class="align-center page-header--text">our mission</h1>
+      </div>
     </div>
   </div>
 </div>
