--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -17,7 +17,7 @@
 .home-text {
   width: 70rem;
   padding: 5rem;
-  color: #c90404;
+  color: $c-red;
   font-family: 'Permanent Marker', cursive;
   font-size: 4.5rem;
 }
