--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,6 +1,9 @@
 <div class="home">
   <div class="section">
     <div class="container">
+      <div class="page-header">
+        <h1 class="align-center page-header--text">black dog surplus, inc.</h1>
+      </div>
       <div class="banner">
         <img class= "home-logo" src="/img/home-logo.png" alt="">
         <h1 class="home-text">When disaster happens and you feel like you have nowhere to turn, turn to Black Dog Surplus, Inc.!</h1>
