--- a/app/styles/custom-packaging.scss
+++ b/app/styles/custom-packaging.scss
@@ -1,5 +1,17 @@
 .custom-packaging {
   margin: 0;
+  padding-bottom: $m-gutter * 4;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/custom-packaging-background.jpg');
   background-size: cover;
+
+  &__image {
+    width: 45rem;
+    height: 32rem;
+    margin: $m-gutter * 2 0;
+  }
+
+  &__text {
+    padding: $m-gutter * 4;
+    font-size: 2rem;
+  }
 }
