our-mission page complete

--- a/app/templates/our-mission.hbs
+++ b/app/templates/our-mission.hbs
@@ -4,6 +4,10 @@
       <div class="page-header">
         <h1 class="align-center page-header--text">our mission</h1>
       </div>
+      <div class="flex">
+        <img class="our-mission__image" src="/img/our-mission.jpg" alt="">
+        <p class="our-mission__text">Our Mission at Black Dog Surplus, Inc. is very simple. We will work with you to custom design a ration kit that meets all your needs. When you grow tired from having different needs than everyone else while having to accept the same solution as everyone else has, give us a call. Life does not have to be about compromise. Your ration kits can be exciting, unique, and fulfilling while being Life Sustaining! Call us today, and lets get creative together.</p>
+      </div>
     </div>
   </div>
 </div>
