--- a/app/styles/our-mission.scss
+++ b/app/styles/our-mission.scss
@@ -2,4 +2,14 @@
   margin: 0;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/our-mission-background.jpeg');
   background-size: cover;
+
+  &__image {
+    width: 50rem;
+    padding: $m-gutter * 4;
+  }
+
+  &__text {
+    padding: $m-gutter * 4;
+    font-size: 1.7rem;
+  }
 }
