--- a/app/styles/humanitarian-aid.scss
+++ b/app/styles/humanitarian-aid.scss
@@ -2,4 +2,13 @@
   margin: 0;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/humanitarian-aid-background.jpg');
   background-size: cover;
+
+  &__text {
+    padding: $m-gutter * 2;
+
+    &--actual {
+      padding: $m-gutter 0;
+      font-size: 1.6rem;
+    }
+  }
 }
