home page @media complete

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,6 +15,7 @@ $navbar-default-bg: transparent;
 @import 'humanitarian-aid';
 @import 'contact';
 @import 'companies';
+@import 'media';
 
 .app {
   display: flex;
