--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,21 +1,20 @@
 <div class="app">
-  <nav class="navbar navbar-default navbar-fixed-top negative-margin">
+  <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#dropdown">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
       </div>
-      <div class="collapse navbar-collapse" id="dropdown">
+      <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="nav navbar-nav">
           <li class="nav-text">{{#link-to "home"}}Home{{/link-to}}</li>
           <li class="nav-text">{{#link-to "why-bds"}}Why Black Dog Surplus{{/link-to}}</li>
           <li class="nav-text">{{#link-to "custom-packaging"}}Custom Packaging{{/link-to}}</li>
           <li class="nav-text">{{#link-to "our-mission"}}Our Mission{{/link-to}}</li>
           <li class="nav-text">{{#link-to "humanitarian-aid"}}Humanitarian Aid{{/link-to}}</li>
-          {{!-- <li class="nav-text">{{#link-to "companies"}}Affiliated Companies{{/link-to}}</li> --}}
           <li class="nav-text">{{#link-to "contact"}}Contact{{/link-to}}</li>
         </ul>
       </div>
