manual footer copyright year for now

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -26,7 +26,7 @@
   <footer class="footer">
     <div class="section">
       <div class="container">
-        <p class="flex-end">© {{currentYear}} Black Dog Surplus, Inc.</p>
+        <p class="flex-end">© 2018 Black Dog Surplus, Inc.</p>
       </div>
     </div>
   </footer>
