--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -26,7 +26,8 @@
   <footer class="footer">
     <div class="section">
       <div class="container">
-        <p class="flex-end">© 2018 Black Dog Surplus, Inc.</p>
+        {{!-- <p class="flex-end">© 2018 Black Dog Surplus, Inc.</p> --}}
+        <div>&copy; {{year}} Black Dog Surplus, Inc. All Rights Reserved.</div>
       </div>
     </div>
   </footer>
