--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,3 +1,7 @@
+.hidden {
+  display: none;
+}
+
 .home {
   margin: 0;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/home-background.JPG');
