--- a/app/templates/components/current-year.hbs
+++ b/app/templates/components/current-year.hbs
@@ -1,1 +1,34 @@
-{{yield}}
+<div class="app">
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="main-navbar">
+        <ul class="nav navbar-nav">
+          <li class="nav-text">{{#link-to "home"}}Home{{/link-to}}</li>
+          <li class="nav-text">{{#link-to "why-bds"}}Why Black Dog Surplus{{/link-to}}</li>
+          <li class="nav-text">{{#link-to "custom-packaging"}}Custom Packaging{{/link-to}}</li>
+          <li class="nav-text">{{#link-to "our-mission"}}Our Mission{{/link-to}}</li>
+          <li class="nav-text">{{#link-to "humanitarian-aid"}}Humanitarian Aid{{/link-to}}</li>
+          <li class="nav-text">{{#link-to "contact"}}Contact{{/link-to}}</li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  {{outlet}}
+
+  <footer class="footer">
+    <div class="section">
+      <div class="container">
+        {{!-- <p class="flex-end">© 2018 Black Dog Surplus, Inc.</p> --}}
+        <div>&copy; {{year}} Black Dog Surplus, Inc.</div>
+      </div>
+    </div>
+  </footer>
+</div>
