--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -4,28 +4,28 @@
       <div class="page-header">
         <h1 class="align-center page-header--text">contact us</h1>
       </div>
-      <div class="contact__content flex">
+      <div class="contact__content">
         <div class="contact__left">
           <ul>
             <li>
-              <h3 class="contact__header--text">Mailing Address:</h3>
+              <h2 class="contact__header--text">Mailing Address:</h2>
             </li>
             <li class="contact__text">242 West Main Street</li>
             <li class="contact__text">Suite 116</li>
             <li class="contact__text">Hendersonville TN 37075</li>
           </ul>
           <ul>
-            <h3 class="contact__header--text">Call Us:</h3>
+            <h2 class="contact__header--text">Call Us:</h2>
             <p class="contact__text">General Information: 615-431-2305</p>
           </ul>
         </div>
-        <div class="contact__right">
-          <div class="social">
-            <a target="_blank" href="https://www.facebook.com/blackdogsurplus/"><i class="fa fa-facebook-square social-icon social-fb" aria-hidden="true"></i></a>
-            <a target="_blank" href="https://twitter.com/blackdogsurplus"><i class="fa fa-twitter-square social-icon social-tt" aria-hidden="true"></i></a>
-            <a target="_blank" href="https://www.linkedin.com/company-beta/22312975/"><i class="fa fa-linkedin-square social-icon social-li" aria-hidden="true"></i></a>
-          </div>
+
+        <div class="social">
+          <a target="_blank" href="https://www.facebook.com/blackdogsurplus/"><i class="fa fa-facebook-square social-icon social-fb" aria-hidden="true"></i></a>
+          <a target="_blank" href="https://twitter.com/blackdogsurplus"><i class="fa fa-twitter-square social-icon social-tt" aria-hidden="true"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/company-beta/22312975/"><i class="fa fa-linkedin-square social-icon social-li" aria-hidden="true"></i></a>
         </div>
+
       </div>
     </div>
   </div>
