--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -4,12 +4,13 @@ $fa-li: #0076b4;
 
 
 .contact {
-  margin: 0;
+  padding-top: 5rem;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/contact-background.jpg');
   background-size: cover;
+  min-height: 100vh;
 
   &__text {
-    font-size: 18px;
+    font-size: 25px;
   }
 
   &__content {
@@ -20,15 +21,15 @@ $fa-li: #0076b4;
 
 .align-center {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
 .social {
-  display: flex;
-  flex-direction: column;
-  font-size: 4rem;
+  padding: $m-gutter * 4 0;
+  text-align: center;
+  font-size: 50px;
 
 
   &-fb {
