--- a/app/styles/humanitarian-aid.scss
+++ b/app/styles/humanitarian-aid.scss
@@ -1,7 +1,8 @@
 .humanitarian-aid {
-  margin: 0;
+  padding-top: 5rem;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/humanitarian-aid-background.jpg');
   background-size: cover;
+  min-height: 100vh;
 
   &__text {
     padding: $m-gutter * 2;
