--- a/app/styles/our-mission.scss
+++ b/app/styles/our-mission.scss
@@ -1,7 +1,8 @@
 .our-mission {
-  margin: 0;
+  padding-top: 5rem;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/our-mission-background.jpeg');
   background-size: cover;
+  min-height: 100vh;
 
   &__image {
     width: 50rem;
