--- a/app/styles/why-bds.scss
+++ b/app/styles/why-bds.scss
@@ -1,6 +1,8 @@
 .why-bds {
+  padding-top: 5rem;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/why-bds-background.jpg');
   background-size: cover;
+  min-height: 100vh;
 
   &__info {
     width: 45%;
