--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -3,7 +3,7 @@
 }
 
 .home {
-  padding-top: 5rem;
+  padding: $m-gutter * 5 0;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/home-background.JPG');
   background-size: cover;
   min-height: 100vh;
