--- a/app/styles/humanitarian-aid.scss
+++ b/app/styles/humanitarian-aid.scss
@@ -1,5 +1,5 @@
 .humanitarian-aid {
-  padding-top: 5rem;
+  padding: $m-gutter * 5 0;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/humanitarian-aid-background.jpg');
   background-size: cover;
   min-height: 100vh;
