--- a/app/styles/our-mission.scss
+++ b/app/styles/our-mission.scss
@@ -1,5 +1,5 @@
 .our-mission {
-  padding-top: 5rem;
+  padding: $m-gutter * 5 0;
   background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/our-mission-background.jpeg');
   background-size: cover;
   min-height: 100vh;
