--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,42 +1,5 @@
-<div class="home">
-  <div class="section">
-    <div class="container">
-      <div class="page-header">
-        <h1 class="align-center page-header--text">black dog surplus, inc.</h1>
-      </div>
-      <div class="banner">
-        <img class= "home-logo" src="/img/home-logo.png" alt="">
-        <h1 class="home-text">When disaster happens and you feel like you have nowhere to turn, turn to Black Dog Surplus, Inc.!</h1>
-      </div>
-    </div>
-  </div>
-  <div class="section">
-    <div class="container">
-      <div class="company">
-        <p class="company-overview">Black Dog Surplus provides customized freeze dried Rations and Meals Ready to Eat for emergency personnel, civilian emergency agencies and military usage. Black Dog Surplus Rations are developed with their Clients to meet specific user needs, including dietary or religious requirements — and is not limited to nut/seafood allergy, gluten or dairy intolerance, Sikh, Halal or Kosher. Black Dog Surplus works to meet and exceed existing Client ration standards, including overall nutrition, caloric density, variety, taste, packaging, and value. Black Dog Surplus is able to deploy food, water, fire, shelter, first aid and hygiene for up to 25,000 people in a disaster situation anywhere in the continental United States in less than 24 hours.</p>
-      </div>
-      <div class="flex-end">
-        <div class="grid">
-          <div class="grid__item">
-            <div class="home-bottom">
-              <img class="home-bottom__img" src="/img/home-bottom-1.jpg" alt="">
-              {{!-- <h1 class="home-bottom__text">Delivered in a timely fashion.</h1> --}}
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="home-bottom">
-              <img class="home-bottom__img" src="/img/home-bottom-2.jpg" alt="">
-              {{!-- <h1 class="home-bottom__text">Delivered in a timely fashion.</h1> --}}
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="home-bottom">
-              <img class="home-bottom__img" src="/img/home-bottom-3.jpg" alt="">
-              {{!-- <h1 class="home-bottom__text">Delivered in a timely fashion.</h1> --}}
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+{{#transition-group transition-class="fade-in-and-out"}}
+
+  {{fade-in-and-out--home}}
+
+{{/transition-group}}
