--- a/app/templates/humanitarian-aid.hbs
+++ b/app/templates/humanitarian-aid.hbs
@@ -1,18 +1,5 @@
-<div class="humanitarian-aid">
-  <div class="section">
-    <div class="container">
-      <div class="page-header">
-        <h1 class="align-center page-header--text">humanitarian aid program</h1>
-      </div>
-      <ul class="humanitarian-aid__text">
-        <li class="humanitarian-aid__text--actual">First, to be clear, Black Dog Surplus, Inc. is a FOR PROFIT organization. No portion of any purchase from Black Dog Surplus, Inc. is in any way tax deductible.</li>
-        <li class="humanitarian-aid__text--actual">That said, the owners of Black Dog Surplus, Inc. believe that it is our responsibility as part of the human race to assist, when possible, our fellow man. There was an article recently that said that Globally we spend three times as much on ice cream as we do on Humanitarian Aid. While we could not verify that statistic, the article did make us think long and hard about our companies involvement in Humanitarian Aid. As such, we decided on the following courses of action.</li>
-        <li class="humanitarian-aid__text--actual">One, Black Dog Surplus, Inc. would use ten percent (10%) of our profits to assist the Global Humanitarian Aid Mission. In doing so, we would keep the funds in the communities in which the profits were earned. Meaning, when dealing with a foreign government, our Humanitarian Aid funds would go to the country that made the purchase; to assist in their low income areas with relief. When dealing within the United States, the funds allocated to Humanitarian Aid Relief would stay in the State in which the profits were earned.</li>
-        <li class="humanitarian-aid__text--actual">Two, we would build strategic partnerships with companies like Nanovo Solutions, Ops Defense Corporation, And Enviro Air Purification to bring Clean Air, Clean Water and Clean Food to areas that are in desperate need.</li>
-        <li class="humanitarian-aid__text--actual">Three, in keeping with current U.S. Law, all Humanitarian Aid Resources we export would be shipped on U.S. Flagged Vessels.</li>
-      </ul>
-    </div>
-  </div>
-</div>
+{{#transition-group transition-class="fade-in-and-out"}}
 
-{{outlet}}
+  {{fade-in-and-out--humanitarian-aid}}
+
+{{/transition-group}}
