--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,11 +1,15 @@
 $m-gutter: 1rem;
 $c-grey: #595959;
 $c-red: #c90404;
+$c-white: #ffffff;
 $c-off-white: #e6e3df;
+$c-skin: rgba($c-off-white, 0.9);
 
 $navbar-default-link-color: #000;
 $navbar-default-link-hover-color: $c-red;
 $navbar-default-bg: $c-off-white;
+
+
 
 @import 'reset';
 @import 'ember-bootstrap/bootstrap';
@@ -17,15 +21,15 @@ $navbar-default-bg: $c-off-white;
 @import 'contact';
 @import 'media';
 
-.fade-in-and-out{
+.fade-in-and-out {
 
   &-enter {
     opacity: 0.01;
   }
 
   &-enter-active {
+    transition: opacity 0.75s ease-in;
     opacity: 1;
-    transition: opacity .75s ease-in;
   }
 
   &-leave {
@@ -33,14 +37,14 @@ $navbar-default-bg: $c-off-white;
   }
 
   &-leave-active {
+    transition: opacity 0.75s ease-in;
     opacity: 0.01;
-    transition: opacity .75s ease-in;
   }
 }
 
 .app {
-  background: $c-off-white;
   min-height: 100vh;
+  background: $c-off-white;
 }
 
 .section {
@@ -96,6 +100,6 @@ $navbar-default-bg: $c-off-white;
 .footer {
   padding: $m-gutter;
   background: $c-grey;
-  color: #ffffff;
+  color: $c-white;
   font-size: 1.5rem;
 }
