--- a/app/styles/custom-packaging.scss
+++ b/app/styles/custom-packaging.scss
@@ -1,8 +1,8 @@
 .custom-packaging {
-  padding: $m-gutter * 5 0;
-  background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/custom-packaging-background.jpg');
-  background-size: cover;
   min-height: 100vh;
+  padding: $m-gutter * 5 0;
+  background: linear-gradient($c-skin, $c-skin), url('../img/custom-packaging-background.jpg');
+  background-size: cover;
 
   &__image {
     width: 45rem;
