--- a/app/styles/humanitarian-aid.scss
+++ b/app/styles/humanitarian-aid.scss
@@ -1,8 +1,8 @@
 .humanitarian-aid {
-  padding: $m-gutter * 5 0;
-  background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/humanitarian-aid-background.jpg');
-  background-size: cover;
   min-height: 100vh;
+  padding: $m-gutter * 5 0;
+  background: linear-gradient($c-skin, $c-skin), url('../img/humanitarian-aid-background.jpg');
+  background-size: cover;
 
   &__text {
     padding: $m-gutter * 2;
