--- a/app/styles/our-mission.scss
+++ b/app/styles/our-mission.scss
@@ -1,8 +1,8 @@
 .our-mission {
-  padding: $m-gutter * 5 0;
-  background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/our-mission-background.jpeg');
-  background-size: cover;
   min-height: 100vh;
+  padding: $m-gutter * 5 0;
+  background: linear-gradient($c-skin, $c-skin), url('../img/our-mission-background.jpeg');
+  background-size: cover;
 
   &__image {
     width: 50rem;
