--- a/app/styles/why-bds.scss
+++ b/app/styles/why-bds.scss
@@ -1,8 +1,8 @@
 .why-bds {
-  padding: $m-gutter * 5 0;
-  background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/why-bds-background.jpg');
-  background-size: cover;
   min-height: 100vh;
+  padding: $m-gutter * 5 0;
+  background: linear-gradient($c-skin, $c-skin), url('../img/why-bds-background.jpg');
+  background-size: cover;
 
   &__info {
     width: 45%;
