--- a/app/templates/components/fade-in-and-out--custom-packaging.hbs
+++ b/app/templates/components/fade-in-and-out--custom-packaging.hbs
@@ -5,14 +5,19 @@
       <div class="page-header">
         <h1 class="align-center page-header--text">custom packaging</h1>
       </div>
-      <div class="flex">
-        <img class="custom-packaging__image" src="/img/custom-packaging-1.jpg" alt="">
-        <img class="custom-packaging__image" src="/img/custom-packaging-2.jpg" alt="">
-      </div>
-      <p class="custom-packaging__text">Black Dog Surplus, Inc. has the ability to manufacture a MilSpec Ration Bag in any color, with two color printing. Make YOUR ration kits YOUR OWN thru our Custom Packaging Program. With an extremely LOW Minimum Order Quantity of ONLY 1000 units per imprint, why not have a ration kit that is unique to your organization? Contact us today and lets get Creative, Together!</p>
-      <div class="flex">
-        <img class="custom-packaging__image" src="/img/custom-packaging-3.jpg" alt="">
-        <img class="custom-packaging__image" src="/img/custom-packaging-4.jpg" alt="">
+      <div class="custom-packaging__grid">
+
+        {{#each items as |item|}}
+        <div class="flex custom-packaging__grid--item">
+          <img class="custom-packaging__image" src="/img/{{item.image}}" alt="">
+          <div class="custom-packaging__text">
+            <h2 class="custom-packaging__number">{{item.number}}</h2>
+            <h3 class="custom-packaging__title">{{item.title}}</h3>
+            <p>{{item.desc}}</p>
+          </div>
+        </div>
+        {{/each}}
+
       </div>
     </div>
   </div>
