fixed custom-packaging image issue

--- a/app/templates/components/fade-in-and-out--custom-packaging.hbs
+++ b/app/templates/components/fade-in-and-out--custom-packaging.hbs
@@ -9,7 +9,7 @@
 
         {{#each items as |item|}}
         <div class="flex custom-packaging__grid--item">
-          <img class="custom-packaging__image" src="/img/{{item.image}}" alt="">
+          <img class="custom-packaging__image" src="{{item.image}}" alt="">
           <div class="custom-packaging__text">
             <h2 class="custom-packaging__number">{{item.number}}</h2>
             <h3 class="custom-packaging__title">{{item.title}}</h3>
